3.5.12
Small changes to the api and its documentation
